# rsomics-bam-targetcut

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
src/: cli.rs  errmod.rs  lib.rs  pileup.rs
tests/: compat.rs
tests/golden/: amplicon.bam  amplicon.bam.bai  amplicon_large.bam  amplicon_large.bam.bai
