[package]
name = "rsomics-bam-targetcut"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-bam-targetcut"
authors = ["Zane Leong <efd@live.com>"]
description = "Identify target intervals from pileup depth — Rust port of samtools targetcut"

[[bin]]
name = "rsomics-bam-targetcut"
path = "src/main.rs"


[lib]
name = "rsomics_bam_targetcut"
path = "src/lib.rs"
doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-bamio = { version = "0.1" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
noodles = { version = "0.110", features = ["sam", "bam", "bgzf"] }

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"

[[bench]]
name = "bench"
harness = false
